[package]
name = "rescapeMUD-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }      # Async runtime
tokio-stream = "0.1"       # Async stream handling
futures-util = "0.3"       # Async futures
solana-sdk = "2.2.1"                                # Solana blockchain interaction
serde = { version = "1.0.218", features = ["derive"] }   # Serialization
serde_json = "1.0.139"                                   # JSON handling
anyhow = "1.0.96"                                       # Error handling
rand = "0.9.0"                                          # Randomisation
warp = "0.3"